# ScaleBoardV1

./: .gitignore  CMakeLists.txt
main/: CMakeLists.txt  app_config.h  config.h  main.cpp
main/modules/: ADC_AD7191.cpp  ADC_AD7191.h  CashDrawer.cpp  CashDrawer.h  DisplayTM1640.cpp  DisplayTM1640.h  EthernetManager.cpp  EthernetManager.h  Keyboard.cpp  Keyboard.h  OTAWebServer.cpp  OTAWebServer.h  PowerManager.cpp  PowerManager.h  SerialManager.cpp  SerialManager.h  StatusLED.cpp  StatusLED.h  WiFiManager.cpp  WiFiManager.h
main/utils/: Logger.cpp  Logger.h
